apps/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: syncthing-data-claim
      securityContext:
        runAsUser: 4838
        runAsGroup: 3354
      containers:
      - name: app
        image: syncthing/syncthing:2@sha256:397aa00b92b48d65540ea3ae3cbf271b87bdccbe07a0b7bd7d2debc3a7b29138
        volumeMounts:
        - name: data
          mountPath: /var/syncthing/config
          subPath: config
        - name: data
          mountPath: /Sync
          subPath: data
        ports:
        - containerPort: 8384
        startupProbe:
          httpGet:
            path: /rest/noauth/health
            port: 8384
          failureThreshold: 30  # 30 * 10s = 5 minutes startup leeway
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /rest/noauth/health
            port: 8384
          initialDelaySeconds: 10
          periodSeconds: 30
