apps/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-web
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: syncthing
  ports:
  - port: 80
    targetPort: 8384
