apps/syncthing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-ingress
  namespace: default
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - syncthing
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: syncthing-web
            port:
              number: 80
